# learning-wgpu

./: Cargo.toml
shaders/: shader.vert
shaders/opaque/: shader.frag  shader.vert
shaders/screen/: shader.frag
shaders/transparency/: shader.frag  shader.vert
src/: camera.rs  main.rs  renderer.rs  texture.rs  timer.rs
