[package]
name = "learning-wgpu"
version = "0.1.0"
authors = ["derezzedex <richardsoncusto@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.4"
image = "0.22"
winit = "0.20"
glsl-to-spirv = "0.1"
wgpu = "0.5.0"
bytemuck = "1.2.0"
anyhow = "1.0"
