[package]
name = "learning-wgpu"
version = "0.1.0"
authors = ["derezzedex <richardsoncusto@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.20"
shaderc = "0.6.2"
wgpu = "0.5.0"
futures = "0.3.4"
image = "0.22"
glam = "0.8.7"
bytemuck = "1.2.0"
anyhow = "1.0"
# cgmath = "0.17"
